# ml-platform

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: architecture.html  index.md
docs/api/: config.md
docs/getting-started/: cli.md  installation.md
docs/guides/: evaluation.md
src/ml_platform/: __init__.py  _interfaces.py  _types.py  alerting.py  auth.py  cdn.py  cicd.py  config.py  data.py  email.py  evaluation.py  events.py  feature_flags.py  health.py  log.py  profiles.py  queue.py  s3_events.py  scheduling.py  secrets.py  storage.py  users.py
tests/: conftest.py  test_alerting.py  test_auth.py  test_batch_data.py  test_cdn.py  test_cicd.py  test_config.py  test_data.py  test_email.py  test_email_attachments.py  test_evaluation.py  test_events.py  test_feature_flags.py  test_health.py  test_interfaces.py  test_logging.py  test_profiles.py  test_queue.py  test_s3_events.py  test_scheduling.py  test_secrets.py  test_storage.py  test_types.py  test_users.py
tests/cli/: test_cfn_template.py  test_deploy.py  test_deploy_aws.py  test_deploy_sagemaker.py  test_destroy.py  test_github_oidc.py  test_init.py  test_manifest.py
tests/contracts/: test_serving_app.py
tests/infra/: test_constructs.py
tests/installed/: test_agent_concurrent_runs.py  test_agent_sustained_load.py  test_agent_tool_isolation.py
tests/integration/: test_agent_request_cycle.py
tests/llm/: test_run_context.py
tests/monitoring/: test_dashboards.py  test_metrics.py
tests/serving/: test_agent.py  test_context_store.py  test_conversation_store.py  test_lambda_adapter.py  (+7 more)
(+67 files in other folders)
